--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,6 +2,8 @@ name: Build, publish and deploy docker
 
 on:
   push:
+    branches:
+      - 'main'
     tags:
       - 'v*'
 
@@ -10,9 +12,39 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
+      - uses: isort/isort-action@master
+        with:
+          requirementsFiles: "requirements.txt"
+      - name: Check flake8
+        run: python -m flake8 --max-line-length=150 .
+
+  tests:
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install -r requirements.txt
+      - name: Run tests
+        run: python -m unittest discover tests
+
   build-and-push-image:
     name: Build and push
     runs-on: ubuntu-latest
+    needs: tests
     if: startsWith(github.ref, 'refs/tags/v')
     permissions:
       contents: read
